--- a/wineRec/accounts/templates/accounts/signup.html
+++ b/wineRec/accounts/templates/accounts/signup.html
@@ -14,6 +14,7 @@
 
     -->
     {% load staticfiles %}
+    <link rel="icon" href="{% static 'img/faviconn.ico' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <!-- https://fonts.google.com/specimen/Open+Sans -->
     <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
